source/_assets/css/site.css
.card-wrapper {
    position: relative;
    top:0;
    left:0;
    width:100%;
    height:100%;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: 0.2s all;
    transform-origin: center;

    /*@media all and (max-width:760px) {*/
    /*    position: absolute;*/
    /*    width:500px;*/
    /*    height:750px;*/
    /*    top:0;*/
    /*    left:0;*/
    /*    right:0;*/
    /*    bottom:0;*/
    /*    margin:auto;*/
    /*    transform:scale(0.80);*/
    /*}*/

    /*@media all and (max-width:490px) {*/
    /*    padding-top:0;*/
    /*    margin-top:40px;*/
    /*    transform:scale(0.60);*/
    /*    left:-13.5%;*/
    /*    padding-bottom: 0;*/
    /*}*/
}

.card {
    margin:20px auto;
    position: relative;
    width:250px;
    height:375px;
    background-image: url('/assets/img/card-black.png');
    background-repeat: no-repeat;
    background-position: center center;
    background-size:contain;

    @media all and (max-width:490px) {
        margin-top:80px;
    }

    .photo {
        width:230px;
        height:350px;
        position: absolute;
        top:0;
        left:0;
        right:0;
        bottom:0;
        margin:auto;
        z-index:3;
        border-radius: 50px;
        overflow:hidden;
        background-repeat: no-repeat;
        background-size: cover;
    }

    .front {
        position: absolute;
        top:0;
        left:0;
        right:0;
        bottom:0;
        margin:auto;
        width:250px;
        height:375px;
        background-image: url('/assets/img/card-front.png');
        background-repeat: no-repeat;
        background-position: center center;
        background-size:contain;
        z-index:4;

        #card-title {
            text-transform: uppercase;
            text-align: center;
            width: 100%;
            position: absolute;
            top: 45px;
            color: #FFF;
            padding-left:18px;
            font-size:12px;
        }

        .card-button-wrapper {
            width:150px;
            height:63px;
            position: absolute;
            bottom:70px;
            left:51px;
            display: flex;
            flex-direction: column;
            align-items: center;
            justify-content: center;
        }

        .done-button {
            font-size: 10px;
            position: absolute;
            width:150px;
            height:50px;
            display: flex;
            align-items: center;
            justify-content: center;
            bottom: 3px;
            left: 51px;
            color:#FFF;
        }
    }
}

#progress-bar {
    transition: 0.2s all;
}

#reward-screen {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    position: absolute;
    top:0;
    left:0;
    width: 100%;
    height:100%;
    background: rgb(255,0,240);
    background: linear-gradient(180deg, rgba(255,0,240,0.85) 0%, rgba(140,78,255,0.85) 100%);
    color:#FFF;
    z-index:45;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    h1, h2, h3, h4, h5, h6, p {
        color: #FFF;
    }

    img {
        max-width:80%;
    }
}

#pack-screen {
    position: absolute;
    top: 0;
    left:0;
    right:0;
    bottom:0;
    width:100%;
    height:100%;
    text-align: center;
    z-index:35;
    cursor:pointer;

    img {
        position: relative;
        margin:60px auto;
        width:300px;
        height:425px;
    }
}

body {
    overflow:hidden;
}

